--- a/src/main/resources/fxml/EventDetails.fxml
+++ b/src/main/resources/fxml/EventDetails.fxml
@@ -66,7 +66,7 @@
                         
                         <HBox spacing="8" alignment="CENTER_LEFT">
                             <Text text="📍" style="-fx-font-size: 16;"/>
-                            <Text fx:id="eventLocation" text="Virtual & San Francisco, CA" styleClass="event-detail"/>
+                            <Text fx:id="eventLocation" text="Virtual and San Francisco, CA" styleClass="event-detail"/>
                         </HBox>
                     </HBox>
                 </VBox>
